Build to app folder

--- a/renderer/Makefile
+++ b/renderer/Makefile
@@ -15,7 +15,7 @@ NAME = figment
 SRCDIR = src
 IMGUIDIR = lib/imgui
 
-WEB_DIR = web
+WEB_DIR = ../app/src/renderer
 WEB_EXE = $(WEB_DIR)/index.html
 
 SRC = Camera.cpp\
@@ -49,7 +49,7 @@ LDFLAGS += -lm
 EMS = -s USE_SDL=2
 EMS += -s DISABLE_EXCEPTION_CATCHING=1 -sEXPORTED_FUNCTIONS=_onMouseMove,_main
 
-EMS_CFLAGS = ${CFLAGS} -DIMGUI_DISABLE_FILE_FUNCTIONS ${EMS}
+EMS_CFLAGS = ${CFLAGS} -DIMGUI_DISABLE_FILE_FUNCTIONS -sMODULARIZE=1 -sEXPORT_ES6=1 ${EMS}
 EMS_INCL = ${INCL} 
 EMS_LDFLAGS = -s WASM=1 -s USE_WEBGL2=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -s NO_FILESYSTEM=1 ${EMS}
 
