--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "editor.formatOnSave": true,
     "editor.quickSuggestions": {
         "strings": true
+      },
+      "files.associations": {
+        "algorithm": "cpp"
       }
 }
