Preload shader files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "strings": true
       },
       "files.associations": {
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "iosfwd": "cpp"
       }
 }
