--- a/renderer/Makefile
+++ b/renderer/Makefile
@@ -20,8 +20,7 @@ WEB_EXE = $(WEB_DIR)/index.html
 
 ASSET_DIR = res
 
-SRC = Camera.cpp\
-	OrthoCamera.cpp\
+SRC = OrthoCamera.cpp\
 	GLContext.cpp\
 	GLObject.cpp\
 	GLRenderer.cpp\
@@ -50,7 +49,7 @@ LDFLAGS += -lm
 
 # ("EMS" options gets added to both CPPFLAGS and LDFLAGS, whereas some options are for linker only)
 EMS = -s USE_SDL=2
-EMS += -s DISABLE_EXCEPTION_CATCHING=1 -sEXPORTED_FUNCTIONS=_onMouseMove,_insertObject,_main
+EMS += -s DISABLE_EXCEPTION_CATCHING=1 -sEXPORTED_FUNCTIONS=_onMouseMove,_insertObject,_onCanvasResize,_main
 
 EMS_CFLAGS = ${CFLAGS} -DIMGUI_DISABLE_FILE_FUNCTIONS -sMODULARIZE=1 -sEXPORT_ES6=1 ${EMS}
 EMS_INCL = ${INCL} 
