--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
