--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "monaco": "^1.201704190613.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
