--- a/renderer/Makefile
+++ b/renderer/Makefile
@@ -40,7 +40,7 @@ BIN := $(BIN_DIR)/myprogram
 
 CFLAGS = -std=c++17 #-Wall -Wextra -Werror
 
-INCL = -I include -I lib/imgui/include -I lib/glm -I lib -I lib/entt -I src/scene
+INCL = -I include -I lib/imgui/include -I lib/glm -I lib -I lib/entt -I src/scene -I src/physics
 
 LDFLAGS = -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo 
 LDFLAGS += -lm
