--- a/renderer/script-core/FigmentScriptCore.runtimeconfig.json
+++ b/renderer/script-core/FigmentScriptCore.runtimeconfig.json
@@ -1,6 +1,6 @@
 {
   "runtimeOptions": {
-    "tfm": "net7.0",
+    "tfm": "netstandard2.0",
     "framework": {
       "name": "Microsoft.NETCore.App",
       "version": "7.0.0"
