Clean up ems target makefile

--- a/renderer/Makefile.emscripten
+++ b/renderer/Makefile.emscripten
@@ -5,10 +5,8 @@ IMGUIDIR = lib/imgui
 
 WEB_DIR = ../app/src/renderer
 WEB_EXE = $(WEB_DIR)/index.html
-
 ASSET_DIR = res
 
-# Define the directories where source files are located
 SRC_DIRS = 	src\
 			src/renderer\
 			src/platform\
@@ -18,53 +16,28 @@ SRC_DIRS = 	src\
 			lib/imgui\
 			lib/imgui/include
 
-# Define the directory where object files will be placed
 OBJ_DIR := build/objs
 
-# Define the directory where the final executable will be placed
-BIN_DIR := build/bin
-
-# Get a list of all the source files in the source directories
 SRCS := $(foreach dir,$(SRC_DIRS),$(wildcard $(dir)/*.cpp))
 
-# Generate a list of object files to build
+INCL = -I src -I lib/imgui/include -I lib/glm -I lib -I lib/entt -I src/scene -I src/physics -I src/platform/opengl
+
 OBJS := $(patsubst %.cpp,$(OBJ_DIR)/%.o,$(SRCS))
 
-# Define the name of the final executable
-BIN := $(BIN_DIR)/myprogram
+EMS_OPTIONS = -s USE_GLFW=3
+EMS_OPTIONS += -s DISABLE_EXCEPTION_CATCHING=0 -sEXPORTED_FUNCTIONS=_onMouseMove,_insertObject,_onCanvasResize,_main -s EXPORTED_RUNTIME_METHODS='["cwrap", "allocate", "intArrayFromString", "ALLOC_NORMAL", "UTF8ToString"]'
 
 CFLAGS = -g -std=c++17 #-Wall -Wextra -Werror
-
-INCL = -I src -I lib/imgui/include -I lib/glm -I lib -I lib/entt -I src/scene -I src/physics -I src/platform/opengl
-# INCL += -I /usr/local/share/dotnet/packs/Microsoft.NETCore.App.Host.osx-arm64/7.0.8/runtimes/osx-arm64/native
-# INCL += -I src/scripting
-
-INCL += -I lib/mono/include
-
-# LDFLAGS = -framework OpenGL -framework Cocoa -framework IOKit -framework CoreVideo -L /opt/homebrew/lib -lglfw -L /opt/homebrew/lib -lGLEW
-# LDFLAGS += -lm
-# LDFLAGS += -L /usr/local/share/dotnet/packs/Microsoft.NETCore.App.Host.osx-arm64/7.0.8/runtimes/osx-arm64/native -lnethost
-# LDFLAGS += -rpath /usr/local/share/dotnet/packs/Microsoft.NETCore.App.Host.osx-arm64/7.0.8/runtimes/osx-arm64/native
-# LDFLAGS += -L/opt/homebrew/opt/zlib/lib -lz -liconv
-# LDFLAGS += -L lib/mono/lib -lmonosgen-2.0
-
-# ("EMS" options gets added to both CPPFLAGS and LDFLAGS, whereas some options are for linker only)
-EMS = -s USE_GLFW=3
-EMS += -s DISABLE_EXCEPTION_CATCHING=0 -sEXPORTED_FUNCTIONS=_onMouseMove,_insertObject,_onCanvasResize,_main -s EXPORTED_RUNTIME_METHODS='["cwrap", "allocate", "intArrayFromString", "ALLOC_NORMAL", "UTF8ToString"]'
-
-EMS_CFLAGS = ${CFLAGS} -DIMGUI_DISABLE_FILE_FUNCTIONS -sMODULARIZE=1 -sEXPORT_ES6=1 ${EMS}
-EMS_INCL = ${INCL} 
-EMS_LDFLAGS = -s WASM=1 -s USE_WEBGL2=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 ${EMS} -lGLEW -lglfw
-
-UNAME_S := $(shell uname -s)
-UNAME_P := $(shell uname -p)
+EMS_CFLAGS = ${CFLAGS} -DIMGUI_DISABLE_FILE_FUNCTIONS -sMODULARIZE=1 -sEXPORT_ES6=1 ${EMS_OPTIONS}
+LDFLAGS = ${EMS_OPTIONS} -s WASM=1 -s USE_WEBGL2=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -lGLEW -lglfw
 
 CC = em++
 
 all: $(NAME)
 
 $(NAME): ${OBJS} ${WEB_DIR}
-	@$(CC) $(EMS_CFLAGS) $(EMS_INCL) $(OBJS) $(EMS_LDFLAGS) -o $(WEB_EXE) -O3 --shell-file index.html --preload-file ${ASSET_DIR}@
+	@printf "Building %s\n" "$(NAME)"
+	@$(CC) $(EMS_CFLAGS) $(INCL) $(OBJS) $(LDFLAGS) -o $(WEB_EXE) -O3 --shell-file index.html --preload-file ${ASSET_DIR}@
 	@mv ${WEB_DIR}/index.data ../app/public/index.data
 
 $(OBJ_DIR)/%.o: %.cpp
@@ -74,13 +47,6 @@ $(OBJ_DIR)/%.o: %.cpp
 	
 $(WEB_DIR):
 	@mkdir -p $@
-
-scripting:
-	@cd script-core/src && dotnet build
-	@cp script-core/src/bin/Debug/netstandard2.0/ScriptCore.dll script-core/ScriptCore.dll
-
-debug:
-	$(CC) -g $(CFLAGS) $(INCL) $(SRCS) $(LDFLAGS) -o $(NAME)
 
 clean:
 	@rm -rf $(OBJS)
@@ -92,4 +58,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re debug
+.PHONY: all clean fclean re
