Update wasm target makefile

--- a/renderer/Makefile.emscripten
+++ b/renderer/Makefile.emscripten
@@ -27,7 +27,7 @@ OBJS := $(patsubst %.cpp,$(OBJ_DIR)/%.o,$(SRCS))
 EMS_OPTIONS = -s USE_GLFW=3
 EMS_OPTIONS += -s DISABLE_EXCEPTION_CATCHING=0 -sEXPORTED_FUNCTIONS=_onMouseMove,_insertObject,_onCanvasResize,_main -s EXPORTED_RUNTIME_METHODS='["cwrap", "allocate", "intArrayFromString", "ALLOC_NORMAL", "UTF8ToString"]'
 
-CFLAGS = -g -std=c++17 #-Wall -Wextra -Werror
+CFLAGS = -std=c++17 #-Wall -Wextra -Werror
 EMS_CFLAGS = ${CFLAGS} -DIMGUI_DISABLE_FILE_FUNCTIONS -sMODULARIZE=1 -sEXPORT_ES6=1 ${EMS_OPTIONS}
 LDFLAGS = ${EMS_OPTIONS} -s WASM=1 -s USE_WEBGL2=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_EXIT_RUNTIME=0 -s ASSERTIONS=1 -lGLEW -lglfw
 
@@ -36,9 +36,10 @@ CC = em++
 all: $(NAME)
 
 $(NAME): ${OBJS} ${WEB_DIR}
-	@printf "Building %s\n" "$(NAME)"
+	@printf "Building WASM %s\n" "$(NAME)"
 	@$(CC) $(EMS_CFLAGS) $(INCL) $(OBJS) $(LDFLAGS) -o $(WEB_EXE) -O3 --shell-file index.html --preload-file ${ASSET_DIR}@
 	@mv ${WEB_DIR}/index.data ../app/public/index.data
+	@printf "done.\n"
 
 $(OBJ_DIR)/%.o: %.cpp
 	@printf "Compiling %s -> %s\n" "$<" "$@"
