Disable wasm target for now

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -26,16 +26,16 @@ link_directories(
         lib/mono/lib
 )
 
-file(GLOB_RECURSE SRC_FILES
-        "src/*.cpp"
-        "lib/imgui/*.cpp"
-)
-
 add_executable(figment "")
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/res DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/mono DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/script-core DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(GLOB_RECURSE SRC_FILES
+        "src/*.cpp"
+        "lib/imgui/*.cpp"
+)
 
 file(GLOB_RECURSE EXCLUDED_SRC_FILES
         "src/platform/web/*.cpp"
@@ -70,7 +70,32 @@ add_custom_command(TARGET figment POST_BUILD
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
+### Figment WASM
 #add_executable(figment_wasm "")
+#
+#add_custom_target(setup_emscripten_env
+#        COMMAND source ~/dev/emsdk/emsdk_env.sh
+#)
+#
+#add_dependencies(figment_wasm setup_emscripten_env)
+#
+#target_include_directories(figment_wasm
+#        PRIVATE
+#        src
+#        src/scene
+#        src/physics
+#        src/platform/opengl
+#        lib
+#        lib/glm
+#        lib/entt
+#        lib/imgui/include
+#        /Users/willehard/dev/emsdk/upstream/include
+#)
+#
+#file(GLOB_RECURSE SRC_FILES
+#        "src/*.cpp"
+#        "lib/imgui/*.cpp"
+#)
 #
 #file(GLOB_RECURSE EXCLUDED_SRC_FILES
 #        "src/platform/macos/*.cpp"
@@ -80,3 +105,27 @@ add_custom_command(TARGET figment POST_BUILD
 #list(REMOVE_ITEM SRC_FILES ${EXCLUDED_SRC_FILES})
 #
 #target_sources(figment_wasm PRIVATE ${SRC_FILES})
+#
+#set_target_properties(figment_wasm
+#        PROPERTIES
+#        LINK_FLAGS
+#        "-s USE_GLFW=3"
+#        "-s DISABLE_EXCEPTION_CATCHING=0"
+#        "-sEXPORTED_FUNCTIONS=_onMouseMove,_insertObject,_onCanvasResize,_main"
+#        "-s EXPORTED_RUNTIME_METHODS='[\"cwrap\", \"allocate\", \"intArrayFromString\", \"ALLOC_NORMAL\", \"UTF8ToString\"]'"
+#        "-s WASM=1"
+#        "-s USE_WEBGL2=1"
+#        "-sALLOW_MEMORY_GROWTH=1"
+#        "-sNO_EXIT_RUNTIME=0"
+#        "-sASSERTIONS=1"
+#        "-lGLEW"
+#        "-lglfw"
+#)
+#
+#target_compile_options(figment_wasm
+#        PRIVATE
+#        "-std=c++17"
+#        "-DIMGUI_DISABLE_FILE_FUNCTIONS"
+#        "-sMODULARIZE=1"
+#        "-sEXPORT_ES6=1"
+#)
