--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": [ "./node_modules/@webgpu/types", "./node_modules/@types"]
   },
   "include": ["src", "node_modules/monaco-editor/monaco.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
