Consolidate wgsl shader

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -148,6 +148,7 @@ set_target_properties(figment_wasm PROPERTIES LINK_FLAGS "\
         --preload-file res@/res\
         -lGLEW\
         -lglfw\
+        -gsource-map\
         --shell-file ${CMAKE_CURRENT_SOURCE_DIR}/index.html\
 ")
 
